--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -34,23 +34,24 @@
 }
 
 \begin{document}
-\section*{Exercises on TCP connection control}
+\part{Exercises on TCP Connection Control}
     Like previous lab, connect two host with one hub together.
 
 \section{Telnet terminal}
     While \lstinline[emph={your-host, remote-host}]{tcpdump -S host your-host  and remote-host} is running, execute: \lstinline[emph={your-host, remote-host}]{telnet remote-host date}.
     Save the tcpdump output.
     
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Explain TCP connection establishment and termination using the tcpdump output.
-        \item What were the announced MSS values for the two hosts?
-        \item What happens if there is an intermediate network that has an MTU less than the MSS of each host?
-        See if the \texttt{DF} flag was set in tcpdump output.
-        You can change interface \texttt{MTU} with \lstinline{sudo ifconfig $ETH mtu 1400}
-    \end{enumerate}
+    \begin{report}
+    \item Explain TCP connection establishment and termination using the tcpdump output.
     
-\section{TCP vs UDP connection establishment}
+    \item What were the announced MSS values for the two hosts?
+    
+    \item What happens if there is an intermediate network that has an MTU less than the MSS of each host?
+    See if the \texttt{DF} flag was set in tcpdump output.
+    You can change interface \texttt{MTU} with \lstinline{sudo ifconfig $ETH mtu 1400}
+    \end{report}
+    
+\section{TCP vs UDP Connection Establishment}
     While \lstinline[emph={your-host, remote-host}]{tcpdump -nx host your-host and remote-host} is running, use \lstinline{socket}\footnote{Basic command is \lstinline{sock}. Use alternative \lstinline{socket} (linked to \lstinline{sock}).} to send a UDP datagram to \textit{h2}:
     \begin{lstlisting}[emph={your-host, remote-host}]
 socket -u -s remote-host 8888
@@ -62,13 +63,12 @@ socket -i -n1 host 8888
     \end{lstlisting}
     {Save} the \lstinline{tcpdump} output for your lab report.
     
-    \subsection*{Report}
-    \begin{enumerate}
+    \begin{report}
         \item Explain what happened in both the UDP and TCP cases. When a client requests a non-existing server, how do UDP and TCP handle this request, respectively?
-    \end{enumerate}
+    \end{report}
 
-\section*{Exercise on TCP interactive data flow}
-\section{Interactive data flow}
+\part{Exercise on TCP Interactive Data Flow}
+\section{Interactive Data Flow}
 While \lstinline{tcpdump} is capturing the traffic between your machine and a remote machine, issue following commands:
     \begin{lstlisting}[emph={host}]
 tcpdump -nv @{\normalfont\normalsize (or run }wireshark{\normalfont\normalsize  )}@
@@ -80,29 +80,27 @@ telnet host
 
     {Save} the \lstinline{tcpdump} output for your lab report.
     
-    \subsection*{Report}
-    Answer the following questions, based upon the \lstinline{tcpdump} output saved in the above exercise.
-    \begin{enumerate}
-        \item What is a delayed acknowledgement?
-        What is it used for?
-        
-        \item Can you see any delayed acknowledgements in your \lstinline{tcpdump} output?
+    \begin{report}[{Answer the following questions, based upon the \lstinline{tcpdump} output saved in the above exercise.}]
+    \item What is a delayed acknowledgement?
+    What is it used for?
+    
+    \item Can you see any delayed acknowledgements in your \lstinline{tcpdump} output?
 
-        If yes, explain the reason.
-        Mark some of the lines with delayed acknowledgements, and submit the \lstinline{tcpdump} output with your report.
+    If yes, explain the reason.
+    Mark some of the lines with delayed acknowledgements, and submit the \lstinline{tcpdump} output with your report.
 
-        Explain how the delayed ACK timer operates from your \lstinline{tcpdump} output.
+    Explain how the delayed ACK timer operates from your \lstinline{tcpdump} output.
 
-        If you don’t see any delayed acknowledgements, explain the reason why none was observed.
-        
-        \item What is the \textit{Nagle}\footnote{Nagle Algorithm is a means of improving the efficiency of TCP/IP networks by reducing the number of packets that need to be sent over the network.} algorithm used for?
+    If you don’t see any delayed acknowledgements, explain the reason why none was observed.
+    
+    \item What is the \textit{Nagle}\footnote{Nagle Algorithm is a means of improving the efficiency of TCP/IP networks by reducing the number of packets that need to be sent over the network.} algorithm used for?
 
-        From your \lstinline{tcpdump} output, can you tell whether the Nagle algorithm is enabled or not? Give the reason for your answer.
+    From your \lstinline{tcpdump} output, can you tell whether the Nagle algorithm is enabled or not? Give the reason for your answer.
 
-        From your \lstinline{tcpdump} output for when you typed very rapidly, can you see any segment that contains more than one character going from your workstation to the remote machine?
-    \end{enumerate}
+    From your \lstinline{tcpdump} output for when you typed very rapidly, can you see any segment that contains more than one character going from your workstation to the remote machine?
+    \end{report}
 
-\section*{Exercise on TCP bulk data flow}
+\part{Exercise on TCP Bulk Data Flow}
 \section{IP Segment}
     While tcpdump is running and capturing the packets between your machine and a remote machine, on the remote machine, which acts as the server, execute:
     \begin{lstlisting}
@@ -116,32 +114,29 @@ socket -i -n16 remote-host 7777
 
     {Save} all the \lstinline{tcpdump} outputs for your lab report.
     
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Using one of three \lstinline{tcpdump} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements?
+    \begin{report}
+    \item Using one of three \lstinline{tcpdump} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements?
 
-        Compare all the \lstinline{tcpdump} outputs you saved.
-        Discuss any differences among them, in terms of data segments and their acknowledgements.
-        
-        \item From the \lstinline{tcpdump} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings.
+    Compare all the \lstinline{tcpdump} outputs you saved.
+    Discuss any differences among them, in terms of data segments and their acknowledgements.
+    
+    \item From the \lstinline{tcpdump} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings.
 
-        How many different TCP options can you see?
-        Explain their meanings.
-    \end{enumerate}
+    How many different TCP options can you see?
+    Explain their meanings.
+    \end{report}
 
-\section*{Exercises on TCP timers and retransmission}
+\part{Exercises on TCP Timers and Retransmission}
 \section{Keepalive parameter}
     Execute \lstinline{sysctl -A | grep keepalive} to display the default values of the TCP kernel parameters that are related to the TCP keepalive timer.
 
-    \begin{enumerate}
-        \item What is the default value of the TCP keepalive timer?
-        \item What is the maximum number of TCP keepalive probes a host can send?
-    \end{enumerate}
+    \begin{report}
+    \item What is the default value of the TCP keepalive timer?
     
-    \subsection*{Report}
-    Answer the above questions.
+    \item What is the maximum number of TCP keepalive probes a host can send?
+    \end{report}
 
-\section{TCP retransmission}
+\section{TCP Retransmission}
     While \lstinline{tcpdump} is running to capture the packets between your host and a remote host, start a \lstinline{socket} server on the remote host,
     \begin{lstlisting}
 socket -s 8888
@@ -163,15 +158,17 @@ ip link set eth0 up@{\normalfont\normalsize{ or }}@ifconfig eth0 up
     \end{lstlisting}
     When all the data segments are sent, save the \lstinline{tcpdump} output for the lab report.
     
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Submit the \lstinline{tcpdump} output saved in this exercise.
-        \item From the \lstinline{tcpdump} output, identify when the cable was disconnected.
-        \item Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected.
-        \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.\footnote{\href{http://www.ccs-labs.org/teaching/rn/animations/gbn_sr/}{TCP Window visualizer}}.
-    \end{enumerate}
+    \begin{report}
+    \item Submit the \lstinline{tcpdump} output saved in this exercise.
     
-\section*{Other exercises}
+    \item From the \lstinline{tcpdump} output, identify when the cable was disconnected.
+    
+    \item Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected.
+    
+    \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.\footnote{\href{http://www.ccs-labs.org/teaching/rn/animations/gbn_sr/}{TCP Window visualizer}}.
+    \end{report}
+    
+\part{Other exercises}
 \section{Fragmentation}
     While \lstinline[emph={your-host, remote-host}]{tcpdump src host your-host} is running, execute the following command, which is similar to the command we used to find out the maximum size of a UDP datagram in previous chapter (Chapter 5),
     \begin{lstlisting}[emph={n, remote-host}]
@@ -180,21 +177,24 @@ socket -i -n1 -w n remote-host echo
     Let \textit{n} be larger than the maximum UDP datagram size we found in previous chapter.
 
     As an example, you may use $n = 70080$.
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Did you observe any IP fragmentation?
-        \item If IP fragmentation did not occur this time, how do you explain this compared to what you observed in previous chapter for UDP packets?
-    \end{enumerate}
 
-\section{Linux TCP/IP kernel parameter}
+    \begin{report}
+    \item Did you observe any IP fragmentation?
+        
+    \item If IP fragmentation did not occur this time, how do you explain this compared to what you observed in previous chapter for UDP packets?
+    \end{report}
+
+\section{Linux TCP/IP Kernel Parameter}
     Study the manual page of \lstinline{/sbin/sysctl}.
     Examine the default values of some TCP/IP configuration parameters that you might be interested in.
     Examine the configuration files in the \path{/proc/sys/net/ipv4} directory.
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Explain what is \lstinline{sysctl} command for?
-        \item Explain two arbitrary TCP/IP configuration parameters. What is their default values?
-        \item Name two arbitrary file in the \path{/proc/sys/net/ipv4} directory. What is their content?
-    \end{enumerate}
+
+    \begin{report}
+    \item Explain what is \lstinline{sysctl} command for?
+        
+    \item Explain two arbitrary TCP/IP configuration parameters. What is their default values?
+        
+    \item Name two arbitrary file in the \path{/proc/sys/net/ipv4} directory. What is their content?
+    \end{report}
 
 \end{document}
